<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/alarm_item_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="20dp"
            android:textSize="40sp"
            tools:text="9:00"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/alarm_item_switcher"
            android:layout_width="wrap_content"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/alarm_item_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/alarm_item_mon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/alarm_item_mon"/>

        <TextView
            android:id="@+id/alarm_item_tue"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/alarm_item_tue"/>

        <TextView
            android:id="@+id/alarm_item_wed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/alarm_item_wed"/>

        <TextView
            android:id="@+id/alarm_item_thu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/alarm_item_thu"/>

        <TextView
            android:id="@+id/alarm_item_Fri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/alarm_item_fri"/>

        <TextView
            android:id="@+id/alarm_item_sat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/alarm_item_sat"/>

        <TextView
            android:id="@+id/alarm_item_sun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/alarm_item_sun"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/black"/>

</LinearLayout>